Dolphin Part: Update the paste action at the end of the listing

Fixes a problem with the paste action not being enabled, only seen in
Konqueror.

BUG:369523
REVIEW:129448